continued work on tablet home page

--- a/home-index.html
+++ b/home-index.html
@@ -10,17 +10,18 @@
   </head>
   <body>
     <nav>
-      <a class="logo"></a>
+      <div class="logo"><img src= "./images/images/filmclub.png" alt= "film image logo"></div>
       <ul class= "nav-row">
-        <li class= "nav-item1">
+        <li class= "nav-item nav-item1">
           <a href= "home-index.html">Home</a>
         </li>
-        <li class= "nav-item2">
+        <li class= "nav-item nav-item2">
           <a href= "./calendar/calendar-index.html">Calendar</a>
           </li>
-          <li class= "nav-item3">
+          <li class= "nav-item nav-item3">
             <a href= "./join/join-index.html">Join</a>
           </li>
+
         </ul>
       </nav>
       <!--1st section container-->
@@ -61,45 +62,42 @@
         </div>
       </div>
       <div class="poster-container2">
-        <ul class="posters">
-          <li>
+          <div class="poster">
             <img src="./images/images/great-train-poster.jpg" alt="train">
           <a href="https://www.youtube.com/watch?v=zuto7qWrplc">The Great Train Robbery</a>
           <p>Film Club: <b>6/27</b></p>
-        </li>
-        <li>
+      </div>
+      <div class="poster">
           <img src="./images/images/bicycle-thief-poster.jpg" alt="bicycle">
           <a href="https://www.youtube.com/watch?v=H3jnzXX9mXs"> The Bicycle Theif</a>
           <p>Film Club: <b>7/11</b></p>
-        </li>
-        <li>
+      </div>
+      <div class="poster">
           <img src="./images/images/nosferatu-poster.jpg" alt="nosferatu">
           <a href=" https://www.youtube.com/watch?v=FC6jFoYm3xs"> Nosferatu</a>
           <p>Film Club: <b>7/25</b></p>
-        </li>
-        <li>
+        </div>
+        <div class= "poster">
           <img src="./images/images/metropolis-poster.jpg" alt="metropolis">
           <a href= "https://www.youtube.com/watch?v=Q0NzALRJifI">Metropolis</a>
           <p>Film Club: <b>8/08</b></p>
-        </li>
-      </ul>
-        </div>
+      </div>
         </div>
 <!-- bottom nav -->
     </main>
-    <nav>
+    <footer>
       <ul class= "footer-row">
-        <li class= "nav-item1">
+        <li class= "nav-item nav-item1">
           <a href= "home-index.html">Home</a>
         </li>
-        <li class= "nav-item2">
+        <li class= "nav-item nav-item2">
           <a href= "./calendar/calendar-index.html">Calendar</a>
           </li>
-          <li class= "nav-item3">
+          <li class= "nav-item nav-item3">
             <a href= "./join/join-index.html">Join</a>
           </li>
         </ul>
-      </nav>
-            <footer>© 2017, Film Club</footer>
-            </body>
+            <span class= "copywrite">© 2017, Film Club</span>
+          </footer>
+         </body>
           </html>
