add css and html to the calendar page

--- a/calendar/calendar-index.html
+++ b/calendar/calendar-index.html
@@ -35,43 +35,44 @@
       <div class="month">
         <ul>
         <h3 class="cal-title">June</h3>
+      </div>
       </ul>
         <div class="days">
-          <ul class="number">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
-            <li>7</li>
-            <li>8</li>
-            <li>9</li>
-            <li>10</li>
-            <li>11</li>
-            <li>12</li>
-            <li><span class="active">13</span></li>
-            <li>14</li>
-            <li>15</li>
-            <li>16</li>
-            <li>17</li>
-            <li>18</li>
-            <li>19</li>
-            <li>20</li>
-            <li>21</li>
-            <li>22</li>
-            <li>23</li>
-            <li>24</li>
-            <li>25</li>
-            <li>26</li>
-            <li><span class="active">27</span></li>
-            <li>28</li>
-            <li>29</li>
-            <li>30</li>
-            <li>31</li>
+          <ul>
+            <div class="box"><li>1</li></div>
+            <div class="box"><li>2</li></div>
+            <div class="box"><li>3</li></div>
+            <div class="box"><li>4</li></div>
+            <div class="box"><li>5</li></div>
+            <div class="box"><li>6</li></div>
+            <div class="box"><li>7</li></div>
+            <div class="box"><li>8</li></div>
+            <div class="box"><li>9</li></div>
+            <div class="box"><li>10</li></div>
+            <div class="box"><li>11</li></div>
+            <div class="box"><li>12</li></div>
+            <div class="active"><li>13</li></div>
+            <div class="box"><li>14</li></div>
+            <div class="box"><li>15</li></div>
+            <div class="box"><li>16</li></div>
+            <div class="box"><li>17</li></div>
+            <div class="box"><li>18</li></div>
+            <div class="box"><li>19</li></div>
+            <div class="box"><li>20</li></div>
+            <div class="box"><li>21</li></div>
+            <div class="box"><li>22</li></div>
+            <div class="box"><li>23</li></div>
+            <div class="box"><li>24</li></div>
+            <div class="box"><li>25</li></div>
+            <div class="box"><li>26</li></div>
+            <div class="active"><li>27</li></div>
+            <div class="box"><li>28</li></div>
+            <div class="box"><li>29</li></div>
+            <div class="box"><li>30</li></div>
+            <div class="box"><li>31</li></div>
           </ul>
         </div>
-      </div>
+    </div>
     </section>
     <!-- bottom nav -->
   </main>
