tired to fix join page

--- a/join/join-index.html
+++ b/join/join-index.html
@@ -27,7 +27,7 @@
   </nav>
       <!--  1st container-->
       <main>
-        <h1 class="join-header">Join Film Club<h1>
+        <h1 class="join-header">Join Film Club</h1>
           <section>
         <div class="download">
           <div class="file-container">
@@ -35,10 +35,21 @@
             <label for="file"></label>
           <input type="file" id="file"></div>
         </div>
-        </section>
-<!-- 2nd container -->
       <div class="profile-pic"><img src="../images/images/profile-placeholder.png" alt="profile picture"></div>
-    <!--radio list  -->
+    </section>
+    <!-- text box list -->
+    <fieldset>
+      <label for="name">name</label>
+      <input type="text" name="user">
+      <label for="email">email</label>
+      <input type="text" name="email">
+      <label for="password">password</label>
+      <input type="password" name= "password">
+      <label for="confirmpassword">confirm password</label>
+      <input type="password" name="confirmpassword">
+    </fieldset>
+
+<!--radio list  -->
     <section class="interest">
       <h5> Which genres are you interested in?</h5>
       <div class="genres">
