--- a/join/join-index.html
+++ b/join/join-index.html
@@ -58,47 +58,47 @@
         <h3> Which genres are you interested in?</h3>
         <div class="genres">
           <div class="signup-type">
-          <input type="radio" name="user" value="action">
+          <input type="checkbox" name="user" value="action">
           <label for="admin">action</label>
         </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="adventure">
+            <input type="checkbox" name="user" value="adventure">
             <label for="admin">adventure</label>
           </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="comedy">
+            <input type="checkbox" name="user" value="comedy">
             <label for="admin">comedy</label>
           </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="drama">
+            <input type="checkbox" name="user" value="drama">
             <label for="admin">drama</label>
           </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="fantasy">
+            <input type="checkbox" name="user" value="fantasy">
             <label for="admin">fantasy</label>
           </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="historical">
+            <input type="checkbox" name="user" value="historical">
             <label for="admin">historical</label>
           </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="horror">
+            <input type="checkbox" name="user" value="horror">
             <label for="admin">horror</label>
           </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="mystery">
+            <input type="checkbox" name="user" value="mystery">
             <label for="admin">mystery</label>
           </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="romance">
+            <input type="checkbox" name="user" value="romance">
             <label for="admin">romance</label>
           </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="science fiction">
+            <input type="checkbox" name="user" value="science fiction">
             <label for="admin">science fiction</label>
           </div>
           <div class="signup-type">
-            <input type="radio" name="user" value="western">
+            <input type="checkbox" name="user" value="western">
             <label for="admin">western</label>
           </div>
         </div>
@@ -106,10 +106,11 @@
       <!-- input box -->
       <section>
         <div class="additional-container">
-          <label for="text">Additional input</label>
-          <input type="textarea" name="user">
+          <label for="textarea">Additional Input</label>
+      <textarea id="textarea"></textarea>
         </div>
       </section>
+      <input type= "submit" class="film-button" value= "Join Film Club"></input>
     </form>
     <!-- footer -->
   </main>
