--- a/join/join-index.html
+++ b/join/join-index.html
@@ -30,28 +30,40 @@
   <main>
     <h1 class="join-header">Join Film Club</h1>
     <form>
-      <div class="download">
+      <div class = "top-form">
+        <div class = "download-container">
+        <div class="download">
         <div class="file-container">
           <h5>profile picture</h5>
           <label for="file"></label>
-          <input type="file" id="file"></div>
-      </div>
-      <div class="profile-pic"><img src="../images/images/profile-placeholder.png" alt="profile picture"></div>
-    </section>
-      <!-- text box list -->
-      <div class="input-container">
+          <input type="file" id="file" />
+        </div>
+        </div>
+        <div class="profile-pic">
+        <img src="../images/images/profile-placeholder.png" alt="profile picture">
+        </div>
+        </div>
+        <!-- text box list -->
+        <div class = "entire-input-container">
+          <div class = "top-container">
+        <div class="input-container">
         <label for="name">name</label>
         <input type="text" id="name" name="name">
-      </div>
-      <div class="input-container">
+        </div>
+        <div class="input-container">
         <label for="emailAddress">email address</label>
         <input type="text" id="emailAddress" name="emailAddress"></div>
-      <div class="input-container">
+          </div>
+          
+        <div class = "bottom-container">
+        <div class="input-container">
         <label for="password">password</label>
         <input type="password" id="password" name="password"></div>
-      <div class="input-container">
+        <div class="input-container">
         <label for="confirmPassword">confirm password</label>
         <input type="password" id="confirmPassword" name="confirmPassword"></div>
+        </div>
+      </div>
       </div>
       <!--radio list  -->
       <section class="interest">
@@ -117,13 +129,13 @@
   <footer>
     <ul class="footer-row">
       <li class="nav-item nav-item1">
-        <a href="home-index.html">Home</a>
+        <a href="../home-index.html">Home</a>
       </li>
       <li class="nav-item nav-item2">
-        <a href="./calendar/calendar-index.html">Calendar</a>
+        <a href="../calendar/calendar-index.html">Calendar</a>
       </li>
       <li class="nav-item nav-item3">
-        <a href="./join/join-index.html">Join</a>
+        <a href="./join-index.html">Join</a>
       </li>
     </ul>
     <span class="copywrite">© 2017, Film Club</span>
